finished user microservice implementation - except for registering oauth2 user into system. Authenticator microservice is also finished.
Bike riding microservice and client remaining.
