# bike_sharing/src/main/java/com/example/bike_sharing/controller/UserController.java
@@ -1,28 +1,50 @@
 package com.example.bike_sharing.controller;
 
-import com.example.bike_sharing.authentication.OAuthService;
-import com.example.bike_sharing.configuration.AuthConfiguration;
+import com.example.bike_sharing.domain.BikeSharingUser;
 import com.example.bike_sharing.enums.UserServiceStatus;
-import com.example.bike_sharing.model.UserCreate;
-import com.example.bike_sharing.model.UserCreated;
-import com.example.bike_sharing.model.UserLoggedIn;
-import com.example.bike_sharing.model.UserLogin;
-import com.example.bike_sharing.service.UserService;
+import com.example.bike_sharing.model.*;
+import com.example.bike_sharing.service.user.UserService;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
-import org.springframework.messaging.handler.annotation.MessageMapping;
-import org.springframework.messaging.handler.annotation.SendTo;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.ArrayList;
+import java.util.List;
 
 @RestController
 @RequestMapping("/user")
 public class UserController implements UserApi {
     private final UserService userService;
 
+    @Override
+    public ResponseEntity<List<Ride>> userRidesList(String userEmail) {
+        return UserApi.super.userRidesList(userEmail);
+    }
 
+    @Override
+    @PutMapping("/change_role")
+    public ResponseEntity<Void> userChangeRolePut(UserChangeRole userChangeRole) {
+        BikeSharingUser.Role role = BikeSharingUser.Role.valueOf(userChangeRole.getRole().getValue());
+
+        String email = userChangeRole.getEmail();
+        UserServiceStatus operationResult = this.userService.changeUserRole(email,role);
+
+        return new ResponseEntity<>(null,HttpStatusCode.valueOf(operationResult.getStatusCode()));
+    }
+
+    @Override
+    @GetMapping("/list")
+    public ResponseEntity<List<User>> userList(Integer serviceMen) {
+        List<User> users;
+        if(serviceMen == 1){
+            users = this.userService.fetchAllServiceman();
+        }
+        else{
+            users = this.userService.fetchAllRegularUsers();
+        }
+
+        return new ResponseEntity<>(users,HttpStatusCode.valueOf(200));
+    }
 
     @GetMapping("/logout")
     @Override
@@ -34,29 +56,30 @@ public class UserController implements UserApi {
         this.userService = service;
     }
 
-
     @PostMapping("/register")
     @Override
-    public ResponseEntity<UserCreated> createUser(UserCreate userCreate) {
+    public ResponseEntity<UserLoggedIn> createUser(UserCreate userCreate) {
         final String email = userCreate.getEmail();
         final String userName = userCreate.getUsername();
         final String password = userCreate.getPassword();
 
-        final UserServiceStatus resultStatus = this.userService.registerUser(email,userName,password);
-        return sendRegisterResponse(resultStatus);
+        String token = this.userService.registerUser(email,userName,password);
+        return sendRegisterResponse(token == null?409:200,token);
     }
     @PostMapping("/login")
     @Override
     public ResponseEntity<UserLoggedIn> loginUser(UserLogin userLogin) {
-
-        return UserApi.super.loginUser(userLogin);
+        String email = userLogin.getEmail();
+        String password = userLogin.getPassword();
+        String token  = this.userService.loginUser(email,password);
+        return sendRegisterResponse(token == null?404:200, token);
     }
 
 
-    private ResponseEntity<UserCreated> sendRegisterResponse(UserServiceStatus resultStatus){
-        UserCreated responseBody = new UserCreated();
-        responseBody.message(resultStatus.getLabel());
-        return new ResponseEntity<>(responseBody, HttpStatusCode.valueOf(resultStatus.getStatusCode()));
+    private ResponseEntity<UserLoggedIn> sendRegisterResponse(int code, String token){
+        UserLoggedIn responseBody = new UserLoggedIn();
+        responseBody.setToken(token);
+        return new ResponseEntity<>(responseBody, HttpStatusCode.valueOf(code));
     }
 
 
